--- a/src/app/share/component/upload-img/upload-img.component.html
+++ b/src/app/share/component/upload-img/upload-img.component.html
@@ -7,18 +7,24 @@
     </button>
   </div>
   <p id="upload-tip">最多选择8张图片上传
-    <button *ngIf="preUploadImgs.length>0" color="primary" md-raised-button id="upload-mood-img" (click)="closeSelf()">
+    <button *ngIf="preUploadImgs.length>0" color="primary" md-raised-button id="upload-mood-img" (click)="save()">
       确认上传
     </button>
   </p>
 
   <div id="upload-img-div" dnd-sortable-container [sortableData]="preUploadImgs">
-   <img class="pre-send-img list-group-item"  *ngFor="let imgSrc of preUploadImgs;let i = index"
-        dnd-sortable [sortableIndex]="i" [src]="this.api.IMAGE_PREFIX+imgSrc+this.api.IMAGE_MOOD_NARROW_STYLE">
+    <div class="mood-img-wrapper" dnd-sortable [sortableIndex]="i"  *ngFor="let imgSrc of preUploadImgs;let i = index">
+      <img class="pre-send-img"  [src]="this.api.IMAGE_PREFIX+imgSrc+this.api.IMAGE_MOOD_NARROW_STYLE">
+      <div class="img-operation-wrapper">
+          <i class="material-icons delete-img-i" md-tooltip="删除" (click)="deleteMoodImg(i)">delete</i>
+      </div>
+    </div>
+
     <a class="upload" *ngIf="preUploadImgs.length<8">
       <i class="material-icons">add</i>
-      <input title=" " md-tooltip="上传图片" accept="image/gif,image/jpeg,image/jpg,image/png" multiple class="" value="wenjian" type="file" (change)="upload($event)" >
+      <input title=" " md-tooltip="上传图片" accept="image/gif,image/jpeg,image/jpg,image/png" multiple   type="file" (change)="upload($event)" >
     </a>
+    <div [ngBusy]="[uploadSubscribe,deleteSubscribe]"></div>
   </div>
 </main>
 
