--- a/src/app/share/component/art-operation/art-operation.component.html
+++ b/src/app/share/component/art-operation/art-operation.component.html
@@ -6,7 +6,7 @@
     <i class="material-icons">favorite</i>
 
   </div>
-  <div class="operation" mdTooltip="评论一下吧" (click)="openDiscussion()">
+  <div class="operation" (click)="openDiscussion()">
     <i class="material-icons" >sms</i>
     <span class="count">123</span>
   </div>
