--- a/src/app/share/component/upload-img/upload-img.component.css
+++ b/src/app/share/component/upload-img/upload-img.component.css
@@ -1,5 +1,6 @@
 main{
 width: 350px;
+  position: relative;
 }
 #upload-title{
   height: 30px;
@@ -104,4 +105,5 @@ width: 350px;
   cursor: pointer;
   font-weight: bold;
 }
+
 
