--- a/src/app/share/component/sigle-mood/sigle-mood.component.css
+++ b/src/app/share/component/sigle-mood/sigle-mood.component.css
@@ -7,25 +7,82 @@
 }
 /*头像*/
 .mood-profile{
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
   float: left;
   margin-right: 10px;
 }
+/*昵称*/
 .mood-nickname{
   font-size: 14px;
   font-weight: bold;
+  margin-top: 5px;
 }
 /*多久之前发送的*/
 .mood-howlong{
-  font-size: 13px;
+  font-size: 12px;
   color: gray;
 }
 /*心情内容*/
 .mood-content{
   padding-left: 57px;
-  margin-right: 30px;
+  margin-right: 20px;
+  margin-top: 5px;
+}
+/*心情的图片内容*/
+.mood-img-content{
+  margin-top: 10px;
 
+}
+/*心情小图内容*/
+.mood-img-detail-content{
+  padding: 10px;
+  background: rgb(242,242,245);
+}
+.small-detail-img-wrapper{
+  display: block;
+}
+/*心情详细小图*/
+.small-detail-img{
+  opacity: 0.5;
+  margin-left: 5px;
+  border: solid 1px rgba(0,0,0,0);
+  cursor: pointer;
+}
+.mood-img-detail-content .small-detail-img:hover{
+  border: solid 1px rgb(255,129,64);
+  opacity: 1;
+}
+
+.small-detail-img-active{
+  border: solid 1px rgb(255,129,64);
+  opacity: 1;
+  position: relative;
+  top: -5px;
+}
+/*详细图片的大图*/
+.detail-img{
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.prevCursor{
+  cursor: url('../../../../assets/img/pic_prev.cur'),auto;
+}
+.nextCursor{
+  cursor: url('../../../../assets/img/pic_next.cur'),auto;
+}
+.zoomOutCursor{
+  cursor: zoom-out;
+}
+/*心情小图内容*/
+.mood-small-img-content{
+  width:430px;
+}
+/*心情小图*/
+.small-img{
+  margin-left: 5px;
+  cursor: zoom-in;
 }
 
