--- a/src/app/person-center/component/mood/mood.component.css
+++ b/src/app/person-center/component/mood/mood.component.css
@@ -12,6 +12,8 @@ main{
 #froala-editor{
   font-size: 14px;
   width: 680px;
+  border-top: rgb(255,129,64) 4px solid;
+  border-radius: 3px;
 }
 
 /*编辑器操作选项,添加表情图片等*/
@@ -119,7 +121,7 @@ main{
   margin: auto;
   width: 700px;
   padding-top: 30px;
-
+  float: left;
 }
 
 /*每一个心情*/
@@ -128,7 +130,7 @@ main{
   right: 9px;
   margin-top: 20px;
   margin-bottom: 10px;
-  overflow: hidden;
+ float: left;
 }
 /*心情总的时间*/
 .mood-times{
