--- a/src/app/person-center/component/mood/mood.component.html
+++ b/src/app/person-center/component/mood/mood.component.html
@@ -1,5 +1,6 @@
-<main>
-  <div id="froala-editor" [froalaEditor]="rfOptions" [(froalaModel)]="editorContent"></div>
+<main [@flyXInOutFromRight] >
+
+  <div id="froala-editor" class="mood-editor" [froalaEditor]="rfOptions" [(froalaModel)]="editorContent"></div>
   <!--编辑心情操作开始-->
   <div id="editor-operation">
     <!--添加表情-->
@@ -8,7 +9,7 @@
         <i id="operation-face-ico" class="material-icons" (click)="toggleFace()">sentiment_very_satisfied</i>
       </button>
       <span class="operation-text" id="insert-face-text">表情</span>
-      <div id="all-face-wrapper" *ngIf="faceOpened">
+      <div id="all-face-wrapper" *ngIf="faceOpened" [@flyXInOutFromTop]>
         <app-face (faceSelected)="appendFace($event)" (faceOpened)="closeFace($event)"></app-face>
       </div>
     </div>
@@ -19,7 +20,7 @@
         <i id="operation-img-ico" class="material-icons" (click)="toggleUploadImg()">wallpaper</i>
       </button>
       <span class="operation-text" id="insert-img-text">图片</span>
-      <div id="all-insert-img-wrapper" *ngIf="uploadImgOpened">
+      <div id="all-insert-img-wrapper" *ngIf="uploadImgOpened" [@flyXInOutFromTop]>
         <app-upload-mood-img [preUploadImgs]="moodServce.sharePreUploadImgs" (closeUploadImg)="closeUploadImg()"></app-upload-mood-img>
       </div>
     </div>
@@ -49,7 +50,7 @@
     <div class="mood-times">
       <span>今天</span>
     </div>
-    <div class="mood">
+    <div class="mood"  >
       <div class="mood-left">
         <span class="b-mood-circle"></span>
         <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
@@ -61,6 +62,17 @@
         </div>
       </div>
     </div>
-
+    <div class="mood"  >
+      <div class="mood-left">
+        <span class="b-mood-circle"></span>
+        <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
+      </div>
+      <div class="mood-right">
+        <app-sigle-mood></app-sigle-mood>
+        <div class="mood-bottom">
+          <app-art-operation></app-art-operation>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
