--- a/src/app/share/component/art-discussion/art-discussion.component.html
+++ b/src/app/share/component/art-discussion/art-discussion.component.html
@@ -20,10 +20,65 @@
       <span class="active-discussion-by">按热度</span>
       <span>按时间</span>
     </div>
+    <!--一个评论开始-->
     <div class="discussion">
+      <img class="discussion-profile" src="../../../../assets/img/profile.jpg"/>
+      <div class="discussion-content">
+        <!--父级评论-->
+        <div class="parent-discussion">
+          <span class="parent-discussion-nickname">张杰达娃儿</span>
+          <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
+          <div class="discussion-info">
+            <span class="discussion-time">今天:17:35</span>
+            <div class="discussion-operation">
+              <button class="each-operation-btn" md-icon-button><i  class="material-icons">reply</i></button>
+              <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>123</span></button>
+            </div>
+          </div>
+        </div>
+        <!--子级评论-->
+        <div class="all-sub-discussion">
+          <div class="sub-discussion">
+            <span class="sub-discussion-nickname">张杰达娃儿</span>
+            <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
+            <div class="discussion-info">
+              <span class="discussion-time">今天:17:35</span>
+              <div class="discussion-operation">
+                <button class="each-operation-btn" md-icon-button><i  class="material-icons">reply</i></button>
+                <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>123</span></button>
+              </div>
+            </div>
+          </div>
+          <div class="sub-discussion">
+            <span class="sub-discussion-nickname">张杰达娃儿</span>
+            <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
+            <div class="discussion-info">
+              <span class="discussion-time">今天:17:35</span>
+              <div class="discussion-operation">
+                <button class="each-operation-btn" md-icon-button><i  class="material-icons">reply</i></button>
+                <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>123</span></button>
+              </div>
+            </div>
+          </div>
+          <div class="sub-discussion">
+            <span class="sub-discussion-nickname">张杰达娃儿</span>
+            <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
+            <div class="discussion-info">
+              <span class="discussion-time">今天:17:35</span>
+              <div class="discussion-operation">
+                <button class="each-operation-btn" md-icon-button><i  class="material-icons">reply</i></button>
+                <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>123</span></button>
+              </div>
+            </div>
+          </div>
+        </div>
 
+      </div>
     </div>
+    <!--一个评论结束-->
+
   </div>
+  <button class="show-more-discussion-btn" md-raised-button color="primary">查看更多<i class="material-icons">more_vert</i></button>
 </div>
 <!--所有评论结束-->
 
