--- a/src/app/person-center/component/mood/mood.component.css
+++ b/src/app/person-center/component/mood/mood.component.css
@@ -88,6 +88,10 @@ main{
   margin-top: 12px;
   margin-right: 5px;
 }
+/*可见状态被激活*/
+.active-limit{
+  color: orange;
+}
 
 #all-face-wrapper{
   background: white;
