--- a/src/app/person-center/component/mood/mood.component.html
+++ b/src/app/person-center/component/mood/mood.component.html
@@ -51,29 +51,19 @@
     <div class="mood-times">
       <span>今天</span>
     </div>
-    <div class="mood"  >
+    <div class="mood" *ngFor="let mood of moods">
       <div class="mood-left">
         <span class="b-mood-circle"></span>
         <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
       </div>
       <div class="mood-right">
-        <app-sigle-mood></app-sigle-mood>
+        <app-sigle-mood [showMoodDto]="mood"></app-sigle-mood>
         <div class="mood-bottom">
           <app-art-operation></app-art-operation>
         </div>
       </div>
     </div>
-    <div class="mood"  >
-      <div class="mood-left">
-        <span class="b-mood-circle"></span>
-        <img class="leftTriangle" src="../../../../assets/img/bg_dot_left3.png"/>
-      </div>
-      <div class="mood-right">
-        <app-sigle-mood></app-sigle-mood>
-        <div class="mood-bottom">
-          <app-art-operation></app-art-operation>
-        </div>
-      </div>
-    </div>
+
   </div>
+<!--  <md-paginator [pageIndex]="0" pageSize="10"></md-paginator>-->
 </main>
