--- a/src/app/person-center/component/mood/mood.component.css
+++ b/src/app/person-center/component/mood/mood.component.css
@@ -1,10 +1,9 @@
 main{
-  width: 700px;
+  width:800px;
   /*background: white;*/
  /* box-shadow: 0 0 3px rgb(183,183,183); ;*/
   margin: auto;
   margin-top: 20px;
-  padding-bottom: 30px;
 
 }
 
@@ -28,6 +27,7 @@ main{
   left: -1px;
   box-shadow:  0 0 2px rgb(210,210,210);
   top: -3px;
+  margin-bottom: 10px;
 }
 /*每一个具体的操作*/
 .each-operation{
@@ -120,13 +120,12 @@ main{
   margin-top: 5px;
 }
 /*展示所有心情*/
-#all-mood{
+.all-mood{
   border-left: solid 2px rgb(203,203,203);
   margin: auto;
-  width: 700px;
-  padding-top: 30px;
+  width: 690px;
   float: left;
-  margin-bottom: 20px;
+  overflow: visible;
 }
 
 /*每一个心情*/
@@ -135,18 +134,20 @@ main{
   right: 9px;
   margin-top: 20px;
   margin-bottom: 10px;
- float: left;
+  float: left;
 }
 /*心情总的时间*/
 .mood-times{
   position: relative;
   right: 45px;
+  background: red;
+  margin-bottom: 20px;
 }
 
 .mood-times span{
   display: inline-block;
   font-size: 15px;
-  position: relative;
+  position: absolute;
   color: rgb(90,90,90);
   margin-left: 10px;
   background: rgb(220,220,220);
