--- a/src/app/share/component/art-discussion/art-discussion.component.html
+++ b/src/app/share/component/art-discussion/art-discussion.component.html
@@ -2,7 +2,7 @@
 <div class="all-discussion" [@flyXInOutFromTop]>
   <!--写评论-->
   <div class="write-discussion">
-    <img class="my-profile-img" src="../../../../assets/img/profile.jpg"/>
+    <img class="my-profile-img" [src]="homeService.homeInfo.profileImg"/>
     <div #discussionEditor class="discussion-editor" [froalaEditor]="editorOptions" [(froalaModel)]="editorContent"></div>
     <button class="send-discussion-btn" md-raised-button color="primary">评论</button>
     <div class="all-face-wrapper">
