--- a/src/app/share/component/art-discussion/art-discussion.component.css
+++ b/src/app/share/component/art-discussion/art-discussion.component.css
@@ -15,6 +15,7 @@
  */
 .write-discussion{
   border-bottom: 1px rgb(223,223,223) solid;
+  position: relative;
 }
 /*编辑器div*/
 .discussion-editor{
@@ -88,7 +89,7 @@
 /*m每一个评论*/
 .discussion{
   margin-top: 10px;
-  border-bottom: solid 1px rgb(213,213,213);
+  border-bottom: solid 1px rgb(233,233,233);
   padding-bottom: 10px;
   overflow: hidden;
 }
@@ -118,7 +119,10 @@
 /*评论内容*/
 .discussion-text{
   color: rgb(50,50,50);
-  font-size: 13px;
+  font-size: 14px;
+}
+.discussion-text p{
+  color: red;
 }
 /*评论相关，时间和操作*/
 .discussion-info{
