--- a/src/app/share/component/art-discussion/art-discussion.component.html
+++ b/src/app/share/component/art-discussion/art-discussion.component.html
@@ -2,9 +2,10 @@
 <div class="all-discussion" [@flyXInOutFromTop]>
   <!--写评论-->
   <div class="write-discussion">
+    <div [ngBusy]="{busy:[sendParentDiscussionSubscribe,showDiscussionSubscribe],message:'处理中,请稍候'}"></div>
     <img class="my-profile-img" [src]="homeService.homeInfo.profileImg"/>
-    <div #discussionEditor class="discussion-editor" [froalaEditor]="editorOptions" [(froalaModel)]="editorContent"></div>
-    <button class="send-discussion-btn" md-raised-button color="primary">评论</button>
+    <div #discussionEditor class="discussion-editor" [froalaEditor]="editorOptions" [(froalaModel)]="sendDiscussion.content"></div>
+    <button class="send-discussion-btn" md-raised-button color="primary" (click)="insertDiscussion()">评论</button>
     <div class="all-face-wrapper">
       <button class="toggle-face-btn" md-icon-button (click)="toggleFace()">
         <i  class="material-icons face-ico">sentiment_very_satisfied</i>
@@ -21,45 +22,23 @@
       <span>按时间</span>
     </div>
     <!--一个评论开始-->
-    <div class="discussion">
-      <img class="discussion-profile" src="../../../../assets/img/profile.jpg"/>
+    <div class="discussion" *ngFor="let parentDiscussion of  parentDiscussions">
+      <img class="discussion-profile" [src]="parentDiscussion.profileImg"/>
       <div class="discussion-content">
         <!--父级评论-->
         <div class="parent-discussion">
-          <span class="parent-discussion-nickname">张杰达娃儿</span>
-          <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
+          <span class="parent-discussion-nickname">{{parentDiscussion.nickName}}</span>
+          <span class="discussion-text" [innerHTML]="parentDiscussion.content"></span>
           <div class="discussion-info">
-            <span class="discussion-time">今天:17:35</span>
+            <span class="discussion-time">{{parentDiscussion.sortDate}} {{parentDiscussion.shortDate}}</span>
             <div class="discussion-operation">
               <button class="each-operation-btn" md-icon-button><i  class="material-icons">reply</i></button>
-              <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>123</span></button>
+              <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>{{parentDiscussion.thumbsUpCount>0?parentDiscussion.thumbsUpCount:""}}</span></button>
             </div>
           </div>
         </div>
         <!--子级评论-->
         <div class="all-sub-discussion">
-          <div class="sub-discussion">
-            <span class="sub-discussion-nickname">张杰达娃儿</span>
-            <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
-            <div class="discussion-info">
-              <span class="discussion-time">今天:17:35</span>
-              <div class="discussion-operation">
-                <button class="each-operation-btn" md-icon-button><i  class="material-icons">reply</i></button>
-                <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>123</span></button>
-              </div>
-            </div>
-          </div>
-          <div class="sub-discussion">
-            <span class="sub-discussion-nickname">张杰达娃儿</span>
-            <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
-            <div class="discussion-info">
-              <span class="discussion-time">今天:17:35</span>
-              <div class="discussion-operation">
-                <button class="each-operation-btn" md-icon-button><i  class="material-icons">reply</i></button>
-                <button class="each-operation-btn" md-icon-button><i  class="material-icons">thumb_up</i><span>123</span></button>
-              </div>
-            </div>
-          </div>
           <div class="sub-discussion">
             <span class="sub-discussion-nickname">张杰达娃儿</span>
             <span class="discussion-text">:在图片处理服务里会有很多参数需要变成Base64位编码，参考RFC4648。 注意这里的URL 安全Base64位编码只是用在水印</span>
