--- a/src/app/share/component/art-operation/art-operation.component.html
+++ b/src/app/share/component/art-operation/art-operation.component.html
@@ -9,13 +9,13 @@
   </div>
   <div class="operation" (click)="openDiscussion()">
     <i class="material-icons" >sms</i>
-    <span class="count">123</span>
+    <span class="count">{{discussionCount>0?discussionCount:""}}</span>
   </div>
-  <div class="operation" mdTooltip="赞一个">
-    <i class="material-icons">thumb_up</i>
-    <span class="count">123</span>
+  <div class="operation" mdTooltip="{{thumbsUpAble?'点个赞':'已赞'}}" (click)="updateThumbsUpCount()">
+    <i class="material-icons" [ngClass]="{'thumbsUpDisable':!thumbsUpAble}">thumb_up</i>
+    <span class="count">{{thumbsUpCount>0?thumbsUpCount:""}}</span>
   </div>
 </div>
 <!--动态操作结束-->
-<app-art-discussion *ngIf="isDiscussOpen"></app-art-discussion>
+<app-art-discussion *ngIf="isDiscussOpen" [artId]="artId"></app-art-discussion>
 
