--- a/src/styles.css
+++ b/src/styles.css
@@ -77,8 +77,15 @@
   box-shadow: none;
 
 }
+ /*不显示编辑器的快速插入*/
 .fr-quick-insert{
   display: none;
+}
+/*动态中的表情和文字垂直居中*/
+.a-f{
+  vertical-align: middle;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 *{
   margin: 0;
